[kernel] the proto becomes kyo-kernel: old kernel deleted, proto moved into place
Swap step 1, mechanical. The branch's old kernel goes (kyo/kernel/** on
every platform directory, kyo/{Arrow,Kyo,Mask}.scala, kyo/kernel.scala,
kyo/mini, protodemo, its suites and benches). The proto moves with git mv:
kyo/proto/kernel/** to kyo/kernel/**, kyo/proto/Kyo.scala to kyo/Kyo.scala,
kyo/proto/debug to kyo/kernel/debug, tests beside their sources (ArrowTest
and LoopTest under kyo/kernel), outsidekyo/ProtoKernelTest to KernelTest,
ProtoBench to kyo/kernel/bench/KernelBench. Packages and references
rewritten; kyo/kernel.scala is main's alias file plus the Arrow export.

Kept on purpose: kyo/Closed.scala (Effect.bracket throws it; main keeps
it in kyo-core), kyo/Test.scala (IsolateTest extends it), TestVariant,
the cross benches and CompileBench. build.sbt drops the JOL dependency
and the demo's fork settings.

Unverified: the clean batch compile and the kernel suite run next.